# teval

./: .gitignore  INSTALL.md  README.md  create_dummy_data.py  pyproject.toml  requirements.txt  run_example.py
.github/workflows/: ci.yml  tests.yaml
notebooks/: demo.ipynb  example_analysis.ipynb
src/teval/: __main__.py  config.py  io.py  pipeline.py  stats.py  utils.py  workflow.py
src/teval/ensemble/: AbstractEnsemble.py  SimpleEnsemble.py  __init__.py
src/teval/metrics/: __init__.py  deterministic.py  significance.py
src/teval/obs/: usgs.py
src/teval/viz/: __init__.py  animation.py  interactive.py  static.py
tests/: conftest.py  test_config.py  test_ensemble.py  test_io.py  test_stats.py  test_viz.py
