[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teval"
version = "0.1.0"
description = "Analysis and evaluation toolkit for NextGen t-route ensemble outputs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC0-1.0"}
authors = [
  { name="Sean Horvath", email="sean.horvath@noaa.gov" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "netCDF4",
    "xarray",
    "geopandas",
    "matplotlib",
    "contextily",
    "folium",
    "dataretrieval",
    "shapely",
    "PyYAML",
    "pydantic>=2.0",
    "Pillow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
# filterwarnings = [
#     # Ignore the specific numpy binary incompatibility warning
#     "ignore:numpy.ndarray size changed:RuntimeWarning",
#     # Optional: Ignore other common harmless warnings if they appear later
#     "ignore::DeprecationWarning:jupyter_client.*" 
# ]